# zinerator

./: .gitignore  .tool-versions  LICENSE  README.md  Taskfile  notes.md  package-lock.json  package.json  pyproject.toml  urls.txt  xanadu.html  xanadu.md
src/: Article.py  HTMLDocument.py  __main__.py  __main__2.py  __main__3.py  __main__4.py  parser.py
