[build-system]
requires = ["setuptools", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "zinerator"
version = "0.0.1"
authors = [{ name = "Isaac Halvorson", email = "hello@hisaac.net" }]
license = { text = "MIT" }
description = "A tool for generating a printable PDF zine from the articles in a batch of URLs."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.2",
    #    "trafilatura>=1.6.3",
    #    "weasyprint>=60.1",
    #    "pdfbook>=0.1.0",
    #    "newspaper4k@git+https://github.com/AndyTheFactory/newspaper4k#egg=work-0.9.2",
    "python-slugify>=8.0.1",
    #    "readability-lxml>=0.8.1",
    #    "nh3>=0.2.15",
    #    "pyemoji>=1.0.4",
]

[project.urls]
homepage = "https://github.com/hisaac/zinerator"
repository = "https://github.com/hisaac/zinerator"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
lint = [
    "pylance",
    "ruff",
]
dev = [
    "zinerator[lint]"
]

[tool.ruff]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "C4", # flake8-comprehensions
    "TID", # flake8-tidy-imports
]

[tool.ruff.format]
indent-style = "tab"
